--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 				<td>
 					<span class="date">1</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -53,8 +53,8 @@
 				<td>
 					<span class="date">2</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -62,8 +62,8 @@
 				<td>
 					<span class="date">3</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -75,8 +75,8 @@
 				<td>
 					<span class="date">4</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -84,8 +84,8 @@
 				<td>
 					<span class="date">5</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -93,8 +93,8 @@
 				<td>
 					<span class="date">6</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -102,8 +102,8 @@
 				<td>
 					<span class="date">7</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -111,8 +111,8 @@
 				<td>
 					<span class="date">8</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -120,8 +120,8 @@
 				<td>
 					<span class="date">9</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -129,8 +129,8 @@
 				<td>
 					<span class="date">10</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -142,8 +142,8 @@
 				<td>
 					<span class="date">11</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -151,8 +151,8 @@
 				<td>
 					<span class="date">12</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -160,8 +160,8 @@
 				<td>
 					<span class="date">13</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -169,8 +169,8 @@
 				<td>
 					<span class="date">14</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -178,8 +178,8 @@
 				<td>
 					<span class="date">15</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -187,8 +187,8 @@
 				<td>
 					<span class="date">16</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -196,8 +196,8 @@
 				<td>
 					<span class="date">17</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -209,8 +209,8 @@
 				<td>
 					<span class="date">18</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -218,8 +218,8 @@
 				<td>
 					<span class="date">19</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -227,8 +227,8 @@
 				<td>
 					<span class="date">20</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -236,8 +236,8 @@
 				<td>
 					<span class="date">21</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -245,8 +245,8 @@
 				<td>
 					<span class="date">22</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -254,8 +254,8 @@
 				<td>
 					<span class="date">23</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -263,8 +263,8 @@
 				<td>
 					<span class="date">24</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -276,8 +276,8 @@
 				<td>
 					<span class="date">25</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -285,8 +285,8 @@
 				<td>
 					<span class="date">26</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -294,8 +294,8 @@
 				<td>
 					<span class="date">27</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -303,8 +303,8 @@
 				<td>
 					<span class="date">28</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -312,8 +312,8 @@
 				<td>
 					<span class="date">29</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -321,8 +321,8 @@
 				<td>
 					<span class="date">30</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
@@ -330,8 +330,8 @@
 				<td>
 					<span class="date">31</span>
 					<ul class="events">
-						<li><a href="#">Appointment 1</a></li>
-						<li><a href="#">Appointment 2</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 1</a></li>
+						<li><a href="http://cse104.tumblr.com/">Appointment 2</a></li>
 					</ul>
 				</td>
 				<!-- end day -->
